fixes to modifiers; decreased spacing on default theme, I think it looks better; minor bugfixes

--- a/view/less/_kint.less
+++ b/view/less/_kint.less
@@ -219,7 +219,7 @@
   }
 
   dt.kint-parent {
-    max-width     : 100px;
+    max-width     : 180px;
     min-width     : 100%;
     overflow      : hidden;
     text-overflow : ellipsis;
