--- a/view/less/original.less
+++ b/view/less/original.less
@@ -1,7 +1,7 @@
 @import "_kint.less";
 
 @default-font: Consolas, "Courier New", monospace;
-@spacing : 5;
+@spacing : 4;
 
 @main-background: #e0eaef;
 @secondary-background : #c1d4df;
